# fortune_cookie

./: Anchor.toml  Anchor.toml.save  Anchor.tomly
app/: GESTURE_SETUP.md  package-lock.json  package.json
app/.next/: react-loadable-manifest.json
app/.next/dev/cache/: .rscinfo
app/.next/server/: middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
app/.next/server/app/: page.js  page_client-reference-manifest.js
app/.next/server/vendor-chunks/: @coral-xyz.js  @mediapipe.js  @noble.js  @solana-mobile.js  @solana.js  @solflare-wallet.js  @swc.js  @wallet-standard.js  base-x.js  bigint-buffer.js  bindings.js  bn.js.js  borsh.js  bs58.js  buffer-layout.js  bufferutil.js  camelcase.js  cross-fetch.js  dijkstrajs.js  dot-case.js  eventemitter3.js  file-uri-to-path.js  jayson.js  lower-case.js  next.js  no-case.js  node-fetch.js  node-gyp-build.js  pako.js  pngjs.js  qrcode.js  rpc-websockets.js  safe-buffer.js  snake-case.js  superstruct.js  text-encoding-utf-8.js  toml.js  tr46.js  tslib.js  utf-8-validate.js  (+3 more)
app/.next/static/chunks/: _app-pages-browser_node_modules_mediapipe_tasks-vision_vision_bundle_js.js  _app-pages-browser_node_modules_solflare-wallet_sdk_lib_esm_index_js.js  (+3 more)
app/src/: fortunes.json
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/components/: GestureDetector.tsx
app/src/lib/: README.md
docs/: implementation-notes.md
programs/fortune_cookie/: Cargo.toml
programs/fortune_cookie/src/: lib.rs
(+33 files in other folders)
